--- a/R_analysis/scripts/SSFA_3_Plots.Rmd
+++ b/R_analysis/scripts/SSFA_3_Plots.Rmd
@@ -45,11 +45,8 @@ The knit directory for this script is the project directory.
 
 # Load packages
 ```{r}
-library(R.utils)
-library(ggplot2)
-library(tools)
-library(tidyverse)
-library(ggh4x)
+pack_to_load <- c("R.utils", "ggplot2", "tidyverse", "ggh4x")
+sapply(pack_to_load, library, character.only = TRUE, logical.return = TRUE)
 ```
 
 
@@ -85,6 +82,9 @@ y_var <- c("Asfc", "Smfc", "HAsfc9", "HAsfc81", "epLsar", "NewEplsar")
 
 # colors
 grp_colors <- "Software"
+
+# shapes
+grp_shapes <- "NMP_cat"
 
 # subplots Lithics dataset
 facet_lith <- "Treatment"
@@ -136,10 +136,11 @@ ratio_diet <- diet_GP / diet_sheep
 ---
 
 
-# Create column for categories of NMP
+# Exclude surfaces with NMP > 20%
 ```{r}
-all_data[all_data$NMP < 5, "NMP_cat"] <- "0-5%"
+data_nmp0_20 <- filter(all_data, NMP_cat != "20-100%")
 ```
+
 
 ---
 
@@ -148,87 +149,29 @@ all_data[all_data$NMP < 5, "NMP_cat"] <- "0-5%"
 ## Guinea Pigs
 ```{r}
 # Filter data for guinea pigs and by NMP (<5%, 5-10% and >= 10%)
-GP_all <- filter(all_data, Dataset == "GuineaPigs")
-
-nmp10 <- filter(GP_all, NMP >= 10)
-nmp5_10 <- filter(GP_all, NMP < 10 & NMP >= 5)
-nmp0_5 <- filter(GP_all, NMP < 5)
-
-GP_nmp10   <- filter(GP_all, Name %in% nmp10[["Name"]])
-GP_nmp5_10 <- filter(GP_all, Name %in% nmp5_10[["Name"]])
-GP_nmp0_5  <- filter(GP_all, Name %in% nmp0_5[["Name"]])
-
+GP <- filter(data_nmp0_20, Dataset == "GuineaPigs")
 
 # Change from wide to long format
-GP_plot_all  <- pivot_longer(GP_all[c(x_var_GP,     grp_colors, y_var)], all_of(y_var))
-GP_plot_10   <- pivot_longer(GP_nmp10[c(x_var_GP,   grp_colors, y_var)], all_of(y_var))
-GP_plot_5_10 <- pivot_longer(GP_nmp5_10[c(x_var_GP, grp_colors, y_var)], all_of(y_var))
-GP_plot_0_5  <- pivot_longer(GP_nmp0_5[c(x_var_GP,  grp_colors, y_var)], all_of(y_var))
+GP_plot  <- pivot_longer(GP[c(x_var_GP, grp_colors, grp_shapes, y_var)], all_of(y_var))
 
 # Re-order factor levels to fit order of plots on facet
-GP_plot_all$name  <- factor(GP_plot_all$name,  levels = y_var)
-GP_plot_10$name   <- factor(GP_plot_10$name,   levels = y_var)
-GP_plot_5_10$name <- factor(GP_plot_5_10$name, levels = y_var)
-GP_plot_0_5$name  <- factor(GP_plot_0_5$name,  levels = y_var)
+GP_plot$name  <- factor(GP_plot$name, levels = y_var)
 
 # Plot all variables at once using facet_wrap()
-p_GP <- ggplot(mapping = aes_string(x = x_var_GP, y = "value", color = grp_colors)) +
-        
-        # Hide outliers (all points are shown with geom_point() below)
-        # The factor 'ratio_diet' ensures that the boxes have the same width 
-        # as for the sheep dataset
-        geom_boxplot(data = GP_plot_all, outlier.shape = NA, 
-                     position = position_dodge(preserve = "single", width = 0.9*ratio_diet),
-                     width = 0.8*ratio_diet) + 
-  
-        # Define jitter for points within boxplots
-        # The factor 'ratio_diet' ensures that the boxes have the same width 
-        # as for the sheep dataset
-        geom_point(data = GP_plot_0_5, shape = 19, 
-                   position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
-                                                   dodge.width = 0.9*ratio_diet,
-                                                   seed = 123)) +
-  
-        geom_point(data = GP_plot_5_10, shape = 3, 
-                   position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
-                                                   dodge.width = 0.9*ratio_diet,
-                                                   seed = 123)) +
-  
-        geom_point(data = GP_plot_10, shape = 4, 
-                   position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
-                                                   dodge.width = 0.9*ratio_diet,
-                                                   seed = 123)) +
-  
-        # Wrap around parameters
-        facet_wrap(~name, scales = "free_y", ncol = 2) +
-  
-        # Use custom y-scales
-        facetted_pos_scales(y = yscales) +
-  
-        # Remove axis labels
-        labs(x = NULL, y = NULL) + 
-
-        # Choose a light theme
-        theme_classic() +
-
-        # Move legend to bottom and remove legend title
-        theme(legend.position="bottom", legend.title = element_blank()) +
-
-        scale_shape_manual(values = c(3, 4, 19), name = NULL)
-
 p_GP <- ggplot(GP_plot, aes_string(x = x_var_GP, y = "value", color = grp_colors)) +
         
         # Hide outliers (all points are shown with geom_point() below)
         # The factor 'ratio_diet' ensures that the boxes have the same width 
         # as for the sheep dataset
         geom_boxplot(outlier.shape = NA, 
-                     position = position_dodge(preserve = "single", width = 0.9*ratio_diet),
+                     #position = position_dodge(preserve = "single", width = 0.9*ratio_diet),
                      width = 0.8*ratio_diet) + 
   
         # Define jitter for points within boxplots
         # The factor 'ratio_diet' ensures that the boxes have the same width 
         # as for the sheep dataset
-        geom_point(position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
+        geom_point(mapping = aes_string(shape = grp_shapes),
+                   position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
                                                    dodge.width = 0.9*ratio_diet,
                                                    seed = 123)) +
   
@@ -240,12 +183,15 @@ p_GP <- ggplot(GP_plot, aes_string(x = x_var_GP, y = "value", color = grp_colors
   
         # Remove axis labels
         labs(x = NULL, y = NULL) + 
+  
+        # Adjust values for shapes
+        scale_shape_manual(values = c(19, 3, 4)) +
 
         # Choose a light theme
         theme_classic() +
 
         # Move legend to bottom and remove legend title
-        theme(legend.position="bottom", legend.title = element_blank())
+        theme(legend.position = "bottom", legend.title = element_blank())
 
 # Print and save resulting plot
 print(p_GP)
@@ -257,15 +203,16 @@ Warnings are due to the missing values for Toothfrax - NewEplsar.
 
 
 ## Sheeps
-Note that for compactness, comments to explain the code are given only in the section about [Guinea Pigs](#guinea-pigs).
+Note that for compactness, comments to explain the code are given only in the section about [Guinea Pigs](#guinea-pigs).  
+The only difference is that all surfaces have 0% NMP, so the code can be simplified (no 'shape' aesthetics).
 
 ```{r}
-sheep <- filter(all_data, Dataset == "Sheeps")
+sheep <- filter(data_nmp0_20, Dataset == "Sheeps")
 sheep_plot <- pivot_longer(sheep[c(x_var_sheep, grp_colors, y_var)], all_of(y_var))
 sheep_plot$name <- factor(sheep_plot$name, levels = y_var)
 p_sheep <- ggplot(sheep_plot, aes_string(x = x_var_sheep, y = "value", color = grp_colors)) +
            geom_boxplot(outlier.shape = NA, 
-                        position = position_dodge(preserve = "single", width = 0.9),
+                        #position = position_dodge(preserve = "single", width = 0.9),
                         width = 0.8) + 
            geom_point(position = position_jitterdodge(jitter.width = 0.3, 
                                                       dodge.width = 0.9,
@@ -274,7 +221,7 @@ p_sheep <- ggplot(sheep_plot, aes_string(x = x_var_sheep, y = "value", color = g
            facetted_pos_scales(y = yscales) +
            labs(x = NULL, y = NULL) + 
            theme_classic() +
-           theme(legend.position="bottom", legend.title = element_blank())
+           theme(legend.position = "bottom", legend.title = element_blank())
 print(p_sheep)
 ggsave(filename = "/SSFA_Sheeps_plot.pdf", path = dir_out, 
        device = "pdf", width = 190, height = 240, units = "mm")
@@ -290,20 +237,23 @@ Software is still shown with colors.
 `facet_grid()` is used to plot a grid of subplots, with variables in rows and treatments in columns.
 
 ```{r}
-lith <- filter(all_data, Dataset == "Lithics")
-lith_plot <- pivot_longer(lith[c(x_var_lith, grp_colors, facet_lith, y_var)], all_of(y_var))
+lith <- filter(data_nmp0_20, Dataset == "Lithics")
+lith_plot <- pivot_longer(lith[c(x_var_lith, grp_colors, grp_shapes, facet_lith, y_var)],
+                          all_of(y_var))
 lith_plot$name <- factor(lith_plot$name, levels = y_var)
 p_lith <- ggplot(lith_plot, aes_string(x = x_var_lith, y = "value", color = grp_colors)) +
           geom_boxplot(outlier.shape = NA,
-                       position = position_dodge(preserve = "single", width = 0.8),
+                       #position = position_dodge(preserve = "single", width = 0.8),
                        width = 0.7) + 
-          geom_point(position = position_jitterdodge(jitter.width = 0.3, 
+          geom_point(mapping = aes_string(shape = grp_shapes),
+                     position = position_jitterdodge(jitter.width = 0.3, 
                                                      dodge.width = 0.8,
                                                      seed = 123)) +
           facet_grid(as.formula(paste0("name~", facet_lith)), scales = "free_y") +
           labs(x = NULL, y = NULL) + 
+          scale_shape_manual(values = c(19, 3, 4)) +
           theme_classic() +
-          theme(legend.position="bottom", legend.title = element_blank())
+          theme(legend.position = "bottom", legend.title = element_blank())
 print(p_lith)
 ggsave(filename = "/SSFA_Lithics_plot.pdf", path = dir_out, 
        device = "pdf", width = 190, height = 240, units = "mm")
@@ -320,13 +270,16 @@ ext_val <- 10
 
 # Guinea pig dataset
 GP_plot_Smfc <- filter(GP_plot, name == y_Smfc)
-p_GP_Smfc <- ggplot(GP_plot_Smfc, 
+GP_plot_Smfc_filt <- filter(GP_plot_Smfc, value <= ext_val)
+p_GP_Smfc <- ggplot(GP_plot_Smfc_filt, 
                     aes_string(x = x_var_GP, y = "value", color = grp_colors)) +
              geom_boxplot(outlier.shape = NA) + 
-             geom_point(position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
+             geom_point(mapping = aes_string(shape = grp_shapes),
+                        position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
              labs(x = NULL, y = y_Smfc) + 
+             scale_shape_manual(values = c(19, 3, 4)) +
              theme_classic() +
-             theme(legend.position="bottom", legend.title = element_blank())
+             theme(legend.position = "bottom", legend.title = element_blank())
 print(p_GP_Smfc)
 ggsave(plot = p_GP_Smfc, filename = "/SSFA_GuineaPigs_plot_Smfc.pdf", path = dir_out, 
        device = "pdf")
@@ -340,7 +293,7 @@ p_sheep_Smfc <- ggplot(sheep_plot_Smfc_filt,
                 geom_point(position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
                 labs(x = NULL, y = y_Smfc) + 
                 theme_classic() +
-                theme(legend.position="bottom", legend.title = element_blank())
+                theme(legend.position = "bottom", legend.title = element_blank())
 print(p_sheep_Smfc)
 ggsave(plot = p_sheep_Smfc, filename = "/SSFA_Sheeps_plot_Smfc.pdf", path = dir_out, 
        device = "pdf")
@@ -351,9 +304,11 @@ lith_plot_Smfc_filt <- filter(lith_plot_Smfc, value <= ext_val)
 p_lith_Smfc <- ggplot(lith_plot_Smfc_filt, 
                       aes_string(x = x_var_lith, y = "value", color = grp_colors)) +
                geom_boxplot(outlier.shape = NA) + 
-               geom_point(position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
+               geom_point(mapping = aes_string(shape = grp_shapes),
+                          position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
                facet_wrap(~Treatment, scale = "free_y") +
                labs(x = NULL, y = y_Smfc) + 
+               scale_shape_manual(values = c(19, 3, 4)) +
                theme_classic() +
                theme(legend.position="bottom", legend.title = element_blank())
 print(p_lith_Smfc) 
@@ -362,6 +317,11 @@ ggsave(plot = p_lith_Smfc, filename = "/SSFA_Lithics_plot_Smfc.pdf", path = dir_
 ```
 
 These plots of Smfc do not show all data points.  
+For the guinea pigs plot, these points are outside of the y-range shown and are therefore excluded from the plot:  
+```{r}
+data.frame(GP_plot_Smfc[GP_plot_Smfc$value > ext_val, ])
+```
+
 For the sheep plot, these points are outside of the y-range shown and are therefore excluded from the plot:  
 ```{r}
 data.frame(sheep_plot_Smfc[sheep_plot_Smfc$value > ext_val, ])
@@ -387,5 +347,16 @@ RStudio version `r readLines("R_analysis/scripts/SSFA_0_RStudioVersion.txt", n =
 
 ---
 
+
+# Cite R packages used
+```{r, echo = FALSE}
+for (i in pack_to_load) {
+  cat(i, "\n")
+  cat(citation(i)$textVersion, "\n", "\n")
+} 
+```
+
+
+---
 
 END OF SCRIPT
