--- a/R_analysis/scripts/SSFA_3_Plots.Rmd
+++ b/R_analysis/scripts/SSFA_3_Plots.Rmd
@@ -163,15 +163,14 @@ p_GP <- ggplot(GP_plot, aes_string(x = x_var_GP, y = "value", color = grp_colors
         # Hide outliers (all points are shown with geom_point() below)
         # The factor 'ratio_diet' ensures that the boxes have the same width 
         # as for the sheep dataset
-        geom_boxplot(outlier.shape = NA, 
-                     #position = position_dodge(preserve = "single", width = 0.9*ratio_diet),
-                     width = 0.8*ratio_diet) + 
+        geom_boxplot(outlier.shape = NA, width = 0.9*ratio_diet, size = 0.25, fatten = 3) + 
   
         # Define jitter for points within boxplots
         # The factor 'ratio_diet' ensures that the boxes have the same width 
         # as for the sheep dataset
-        geom_point(mapping = aes_string(shape = grp_shapes),
-                   position = position_jitterdodge(jitter.width = 0.3*ratio_diet,
+        geom_point(mapping = aes_string(shape = grp_shapes, group = grp_colors), 
+                   size = 0.8,
+                   position = position_jitterdodge(jitter.width = 0.6,
                                                    dodge.width = 0.9*ratio_diet,
                                                    seed = 123)) +
   
@@ -195,7 +194,7 @@ p_GP <- ggplot(GP_plot, aes_string(x = x_var_GP, y = "value", color = grp_colors
 
 # Print and save resulting plot
 print(p_GP)
-ggsave(filename = "/SSFA_GuineaPigs_plot.pdf", path = dir_out, 
+ggsave(filename = "SSFA_GuineaPigs_plot.pdf", path = dir_out, 
        device = "pdf", width = 190, height = 240, units = "mm")
 ```
 
@@ -211,10 +210,9 @@ sheep <- filter(data_nmp0_20, Dataset == "Sheeps")
 sheep_plot <- pivot_longer(sheep[c(x_var_sheep, grp_colors, y_var)], all_of(y_var))
 sheep_plot$name <- factor(sheep_plot$name, levels = y_var)
 p_sheep <- ggplot(sheep_plot, aes_string(x = x_var_sheep, y = "value", color = grp_colors)) +
-           geom_boxplot(outlier.shape = NA, 
-                        #position = position_dodge(preserve = "single", width = 0.9),
-                        width = 0.8) + 
-           geom_point(position = position_jitterdodge(jitter.width = 0.3, 
+           geom_boxplot(outlier.shape = NA, width = 0.9, size = 0.25, fatten = 3) + 
+           geom_point(size = 0.8,
+                      position = position_jitterdodge(jitter.width = 0.3, 
                                                       dodge.width = 0.9,
                                                       seed = 123)) +
            facet_wrap(~name, scales = "free_y", ncol = 2) +
@@ -223,7 +221,7 @@ p_sheep <- ggplot(sheep_plot, aes_string(x = x_var_sheep, y = "value", color = g
            theme_classic() +
            theme(legend.position = "bottom", legend.title = element_blank())
 print(p_sheep)
-ggsave(filename = "/SSFA_Sheeps_plot.pdf", path = dir_out, 
+ggsave(filename = "SSFA_Sheeps_plot.pdf", path = dir_out, 
        device = "pdf", width = 190, height = 240, units = "mm")
 ```
 
@@ -242,12 +240,11 @@ lith_plot <- pivot_longer(lith[c(x_var_lith, grp_colors, grp_shapes, facet_lith,
                           all_of(y_var))
 lith_plot$name <- factor(lith_plot$name, levels = y_var)
 p_lith <- ggplot(lith_plot, aes_string(x = x_var_lith, y = "value", color = grp_colors)) +
-          geom_boxplot(outlier.shape = NA,
-                       #position = position_dodge(preserve = "single", width = 0.8),
-                       width = 0.7) + 
-          geom_point(mapping = aes_string(shape = grp_shapes),
-                     position = position_jitterdodge(jitter.width = 0.3, 
-                                                     dodge.width = 0.8,
+          geom_boxplot(outlier.shape = NA, width = 0.9, size = 0.25, fatten = 3) + 
+          geom_point(mapping = aes_string(shape = grp_shapes, group = grp_colors), 
+                     size = 0.8,
+                     position = position_jitterdodge(jitter.width = 0.9, 
+                                                     dodge.width = 0.9,
                                                      seed = 123)) +
           facet_grid(as.formula(paste0("name~", facet_lith)), scales = "free_y") +
           labs(x = NULL, y = NULL) + 
@@ -255,7 +252,7 @@ p_lith <- ggplot(lith_plot, aes_string(x = x_var_lith, y = "value", color = grp_
           theme_classic() +
           theme(legend.position = "bottom", legend.title = element_blank())
 print(p_lith)
-ggsave(filename = "/SSFA_Lithics_plot.pdf", path = dir_out, 
+ggsave(filename = "SSFA_Lithics_plot.pdf", path = dir_out, 
        device = "pdf", width = 190, height = 240, units = "mm")
 ```
 
@@ -273,15 +270,18 @@ GP_plot_Smfc <- filter(GP_plot, name == y_Smfc)
 GP_plot_Smfc_filt <- filter(GP_plot_Smfc, value <= ext_val)
 p_GP_Smfc <- ggplot(GP_plot_Smfc_filt, 
                     aes_string(x = x_var_GP, y = "value", color = grp_colors)) +
-             geom_boxplot(outlier.shape = NA) + 
-             geom_point(mapping = aes_string(shape = grp_shapes),
-                        position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
+             geom_boxplot(outlier.shape = NA, width = 0.9*ratio_diet, size = 0.25, fatten = 3) + 
+             geom_point(mapping = aes_string(shape = grp_shapes, group = grp_colors),
+                        size = 1,
+                        position = position_jitterdodge(jitter.width = 0.9,
+                                                        dodge.width = 0.9*ratio_diet, 
+                                                        seed = 123)) +
              labs(x = NULL, y = y_Smfc) + 
              scale_shape_manual(values = c(19, 3, 4)) +
              theme_classic() +
              theme(legend.position = "bottom", legend.title = element_blank())
 print(p_GP_Smfc)
-ggsave(plot = p_GP_Smfc, filename = "/SSFA_GuineaPigs_plot_Smfc.pdf", path = dir_out, 
+ggsave(plot = p_GP_Smfc, filename = "SSFA_GuineaPigs_plot_Smfc.pdf", path = dir_out, 
        device = "pdf")
 
 # Sheep dataset
@@ -289,13 +289,16 @@ sheep_plot_Smfc <- filter(sheep_plot, name == y_Smfc)
 sheep_plot_Smfc_filt <- filter(sheep_plot_Smfc, value <= ext_val)
 p_sheep_Smfc <- ggplot(sheep_plot_Smfc_filt, 
                        aes_string(x = x_var_sheep, y = "value", color = grp_colors)) +
-                geom_boxplot(outlier.shape = NA) + 
-                geom_point(position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
+                geom_boxplot(outlier.shape = NA, width = 0.9, size = 0.25, fatten = 3) + 
+                geom_point(size = 1,
+                           position = position_jitterdodge(jitter.width = 0.3, 
+                                                           dodge.width = 0.9, 
+                                                           seed = 123)) +
                 labs(x = NULL, y = y_Smfc) + 
                 theme_classic() +
                 theme(legend.position = "bottom", legend.title = element_blank())
 print(p_sheep_Smfc)
-ggsave(plot = p_sheep_Smfc, filename = "/SSFA_Sheeps_plot_Smfc.pdf", path = dir_out, 
+ggsave(plot = p_sheep_Smfc, filename = "SSFA_Sheeps_plot_Smfc.pdf", path = dir_out, 
        device = "pdf")
 
 # Lithic dataset
@@ -303,16 +306,19 @@ lith_plot_Smfc <- filter(lith_plot, name == y_Smfc)
 lith_plot_Smfc_filt <- filter(lith_plot_Smfc, value <= ext_val)
 p_lith_Smfc <- ggplot(lith_plot_Smfc_filt, 
                       aes_string(x = x_var_lith, y = "value", color = grp_colors)) +
-               geom_boxplot(outlier.shape = NA) + 
-               geom_point(mapping = aes_string(shape = grp_shapes),
-                          position = position_jitterdodge(jitter.width = 0.2, seed = 123)) +
+               geom_boxplot(outlier.shape = NA, width = 0.9, size = 0.25, fatten = 3) + 
+               geom_point(mapping = aes_string(shape = grp_shapes, group = grp_colors),
+                          size = 1,
+                          position = position_jitterdodge(jitter.width = 0.9, 
+                                                          dodge.width = 0.9,
+                                                          seed = 123)) +
                facet_wrap(~Treatment, scale = "free_y") +
                labs(x = NULL, y = y_Smfc) + 
                scale_shape_manual(values = c(19, 3, 4)) +
                theme_classic() +
                theme(legend.position="bottom", legend.title = element_blank())
 print(p_lith_Smfc) 
-ggsave(plot = p_lith_Smfc, filename = "/SSFA_Lithics_plot_Smfc.pdf", path = dir_out, 
+ggsave(plot = p_lith_Smfc, filename = "SSFA_Lithics_plot_Smfc.pdf", path = dir_out, 
        device = "pdf")
 ```
 
@@ -349,7 +355,7 @@ RStudio version `r readLines("R_analysis/scripts/SSFA_0_RStudioVersion.txt", n =
 
 
 # Cite R packages used
-```{r, echo = FALSE}
+```{r, echo = FALSE, warning = FALSE}
 for (i in pack_to_load) {
   cat(i, "\n")
   cat(citation(i)$textVersion, "\n", "\n")
